--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A platform that lets people sell home made food locally",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
