--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.9.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "styled-components": "^5.1.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
